Home/Footer/App/Readme/api.js modificados/novos

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,3 +32,10 @@
 .container{
     width: 90%;
 }
+
+main{
+    width:100%;
+    height:calc(100vh - 120px);
+    display:flex;
+    flex-direction: column;
+}
