--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,10 @@
 
   html,
   body{
-    background-color:var(--color-background)
+    background-color:var(--color-background);
+    height: 100%;
+    margin: 0;
+    
   }
 
   a{
